<resources>
    <string name="app_name">Falton2.0</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inicia_sesion">IniciaSesion</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_pantallla_inicio">PantalllaInicio</string>
    <string name="faltas">faltas</string>
    <string name="compraventa">compra/venta</string>
    <string name="tareas">Tareas</string>
    <string name="ideas">Ideas</string>
    <string name="curso">Curso</string>
    <string name="perfil">Perfil</string>
    <string name="introducir_nombre">Introduce el email</string>
    <string name="introducir_pass">Introduce una contraseña</string>
    <string name="introducir_email">Introduce un nombre</string>
    <string name="introducir_pass2">Introduce de nuevo la contraseña</string>
    <string name="introducir_pass3">La contraseña no es la misma</string>
    <string name="aceptar_politica">Debes aceptar la politica de privacidad</string>
    <string name="creando_usuario">Creando usuario...</string>
    <string name="usuario_ok_creacion">Se ha creado el usuario</string>
    <string name="usuario_error_creacion">Error en la creacion del usuario</string>
    <string name="iniciando_sesion">Iniciando sesión...</string>
    <string name="inicio_sesion_correcto">Se ha iniciado sesion correctamente</string>
    <string name="inicio_sesion_error">Error en el inicio de sesion</string>
    <string name="menu"><![CDATA[>>MENU<<]]></string>
    <string name="title_activity_falta">Falta</string>
    <string name="title_activity_compra_venta">CompraVenta</string>
    <string name="title_activity_tareas">Tareas</string>
    <string name="title_activity_ideas">Ideas</string>
    <string name="title_activity_curso">Curso</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="nada_mostrar">No hay nada que mostrar para hoy</string>
    <string name="tipo">TIPO</string>
    <string name="addNota">Añadir nota</string>
    <string name="addFalta">Añadir falta</string>
    <string name="addTarea">Añadir tarea</string>
    <string name="addIdea">Añadir idea</string>
    <string name="title_activity_aniadir_falta">AniadirFalta</string>
    <string name="title_activity_aniadir_nota">AniadirNota</string>
    <string name="title_activity_aniadir_idea">AniadirIdea</string>
    <string name="title_activity_aniadir_tarea">AniadirTarea</string>
    <string name="title_activity_elige_curso">EligeCurso</string>
    <string name="tvEligeTuCurso">Elige tu curso</string>
    <string name="siguiente">Siguiente</string>
    <string name="title_activity_elige_asignaturas">EligeAsignaturas</string>
    <string name="tvEligeTusAsignaturas">Elige tus asignaturas</string>
    <string name="eligeLaFechaFalta">Elige la fecha de tu falta</string>
    <string name="fechaEjemplo">dd/mm/yyyy</string>
    <string name="aniadir">Añadir</string>
    <string name="aniadiendoFalta">Añadiendo la falta...</string>
    <string name="title_activity_aniadir_objeto">AniadirObjeto</string>
    <string name="aniadeTuObjeto">Añade tu objeto</string>
    <string name="guardarIdea">Guardar idea</string>
    <string name="guardando_idea">Guardando idea...</string>
    <string name="idea_creada">Se ha guardado tu idea</string>
    <string name="idea_creada_error">Error en el guardado de la idea, prueba mas tarde</string>
    <string name="aniadeCurso">Añade tu curso...</string>
    <string name="aniadeNombreCurso">Nombre del curso</string>
    <string name="aniadeDescripcionCurso">Descripcion del curso</string>
    <string name="guardando_curso">Guardando curso...</string>
    <string name="curso_creado">El curso se ha guardado correctamente</string>
    <string name="curso_creado_error">Error en la creacion del curso</string>
    <string name="nombreDelCurso">Nombre del curso</string>
    <string name="nombreDeLaAsignatura">Nombre de la asignatura</string>
    <string name="cargando_lista">Cargando lista de cursos...</string>
    <string name="tituloDeLaIdea">Titulo de la idea</string>
    <string name="cargando_lista_ideas">Cargando lista de ideas...</string>
    <string name="title_activity_asignatura">Asignatura</string>
    <string name="title_activity_aniadir_asignatura">AniadirAsignatura</string>
    <string name="asignatura_creada_error">Error en la creacion de la asignatura</string>
    <string name="asignatura_creada">Asignatura creada correctamente</string>
    <string name="guardando_asignatura">Guardando asignatura...</string>
    <string name="porcentaje_faltas">El porcentaje permitido es de:</string>
    <string name="total_faltas">Llevas un total horas faltadas de:</string>
    <string name="Elige_curso">Elige el curso</string>
    <string name="elige_asignatura">Elige la asignatura</string>
    <string name="NumeroFaltas">¿Cuántas horas has faltado?</string>
    <string name="numHoras">Nº horas</string>
    <string name="cargando_lista_asignaturas">Cargando lista de asignaturas...</string>
    <string name="cargando_lista_faltas">Cargando la lista de faltas...</string>
    <string name="falta_ok_creada">La falta se ha guardado correctamente</string>
    <string name="falta_error_creada">Error en el guardado de la falta</string>
    <string name="cancelar">cancelar</string>
    <string name="guardar">guardar</string>
    <string name="actualizando_usuario">Actualizando usuario...</string>
    <string name="datos_actualizados_error">Error en la actualizacion</string>
    <string name="aniadiendo_Objeto">Añadiendo objeto</string>
    <string name="objeto_correcto">Objeto añadido correctamente</string>
    <string name="objeto_correcto_error">Error en la insercion del objeto</string>
    <string name="tipoDeObjeto">Compra</string>
    <string name="cargando_lista_objetos">Cargando lista de objetos...</string>
    <string name="cargando_lista_objetos_error">No tienes ningun objeto para visualizar</string>
    <string name="cargando_dia">Cargando dia...</string>
</resources>
