<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.borja.falton20.AniadirFalta"
    tools:showIn="@layout/activity_aniadir_falta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEligeFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eligeLaFechaFalta"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/etFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:editable="false"
            android:hint="@string/fechaEjemplo"
            android:textAppearance="?android:textAppearanceMedium" />
        <TextView
            android:id="@+id/tvEligeCurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Elige_curso"
            android:textAppearance="?android:textAppearanceMedium" />

        <Spinner
            android:id="@+id/spCurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"></Spinner>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elige_asignatura"
            android:textAppearance="?android:textAppearanceMedium" />
        <Spinner
        android:id="@+id/spAsignatura"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"></Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNumeroFaltas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NumeroFaltas"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/etNumHoras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:inputType="number"
            android:maxLength="2"
            android:hint="@string/numHoras"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>
        <Button
            android:id="@+id/btnAniadirFalta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/botones"
            android:text="@string/aniadir" />
    </LinearLayout>
</RelativeLayout>
