<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#D500F9"
    android:elevation="16dp"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:id="@+id/btnFaltas"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/botonesmenu" />

        <View
            android:id="@+id/btncv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/botonesmenu" />

        <View
            android:id="@+id/btnTareas"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/botonesmenu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFaltas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/faltas"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffff" />

        <TextView
            android:id="@+id/btnCompraVenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="-10dp"
            android:text="@string/compraventa"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="-1dp"
            android:text="@string/tareas"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">


        <View
            android:id="@+id/btnIdeas"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/botonesmenu" />

        <View
            android:id="@+id/btnCurso"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/botonesmenu" />

        <View
            android:id="@+id/btnPerful"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/botonesmenu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/ideas"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="-10dp"
            android:text="@string/curso"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="-1dp"
            android:text="@string/perfil"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#ffff" />
    </LinearLayout>
</LinearLayout>